--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Chat App</h1>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="js/chat.js"></script>
   </body>
 </html>
