--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Chat App</h1>
     <form action="" id="message-form">
-      <input type="text" placeholder="message" name="" id="" />
+      <input type="text" placeholder="message" name="message" />
       <button>Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
