--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <form action="" id="message-form">
       <input type="text" placeholder="message" name="message" />
       <button>Send</button>
+
+      <button id="send-location">Send Location</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
