--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,13 @@
 
     <script id="message-template" type="text/html">
       <div>
-        <p>This is </p>  
+        <p>{{message}}</p>  
+      </div>
+    </script>
+
+    <script id="location-message-template" type="text/html">
+      <div>
+        <p><a href="{{url}}" target="_blank">मेरा वर्तमान स्थान|</a></p>
       </div>
     </script>
 
