added time in location share4

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
   <script id="location-message-template" type="text/html">
     <div>
-      <p><a href="{{url}}" target="_blank">मेरा वर्तमान स्थान|</a></p>
+      <p>{{createdAt}} - <a href="{{url}}" target="_blank">मेरा वर्तमान स्थान|</a></p>
     </div>
   </script>
 
