--- a/public/index.html
+++ b/public/index.html
@@ -5,29 +5,50 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Document</title>
+  <!-- <link rel="stylesheet" href="./css/styles.css"> -->
+  <link rel="stylesheet" href="./css/styles.min.css">
+  <link rel="icon" href="./img/favicon.png">
+  <title>Chat</title>
 </head>
 
 <body>
-  <h1>Chat App</h1>
 
-  <div id="messages"></div>
+  <div class="chat">
+    <div class="chat__sidebar"></div>
+    <div class="chat__main">
+      <div id="messages" class="chat__messages"></div>
 
-  <form action="" id="message-form">
-    <input type="text" placeholder="message" name="message" />
-    <button>Send</button>
-    <button id="send-location">Send Location</button>
-  </form>
+      <div class="compose">
+        <form action="" id="message-form">
+          <input type="text" placeholder="message" name="message" />
+          <button>Send</button>
+        </form>
+        <button id="send-location">Send Location</button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- <h1>Chat App</h1> -->
+
 
   <script id="message-template" type="text/html">
-    <div>
-      <p>{{createdAt}} - {{message}}</p>
+    <div class="message">
+      <p>
+        <span class="message__name">user</span>
+        <span class="message__meta">{{createdAt}}</span>
+      </p>
+      <p>{{message}}</p>
     </div>
   </script>
 
   <script id="location-message-template" type="text/html">
     <div>
-      <p>{{createdAt}} - <a href="{{url}}" target="_blank">मेरा वर्तमान स्थान|</a></p>
+      <p>
+        <span class="message__name">user</span>
+        <span class="message__meta">{{createdAt}}</span>
+      </p>
+      <p><a href="{{url}}" target="_blank">मेरा वर्तमान स्थान|</a></p>
     </div>
   </script>
 
